--- a/OneLineToggl/Base.lproj/Main.storyboard
+++ b/OneLineToggl/Base.lproj/Main.storyboard
@@ -689,9 +689,12 @@
                                 </viewController>
                             </touchBarItem>
                         </touchBarItems>
+                        <connections>
+                            <outlet property="delegate" destination="IQv-IB-iLA" id="R7C-de-8BZ"/>
+                        </connections>
                     </touchBar>
                     <connections>
-                        <segue destination="XfG-lQ-9wD" kind="relationship" relationship="window.shadowedContentViewController" id="cq2-FE-JQM"/>
+                        <segue destination="XfG-lQ-9wD" kind="relationship" relationship="window.shadowedContentViewController" id="Cq8-rc-mhz"/>
                     </connections>
                 </windowController>
                 <customObject id="Oky-zY-oP4" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
@@ -736,16 +739,28 @@
                                     <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
+                            <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wQv-gi-Qfa">
+                                <rect key="frame" x="356" y="106" width="81" height="32"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <buttonCell key="cell" type="push" title="Button" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="t7i-TA-cv1">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="done:" target="XfG-lQ-9wD" id="63r-eY-PKP"/>
+                                </connections>
+                            </button>
                         </subviews>
                     </view>
                     <connections>
                         <outlet property="lastActivity" destination="lvU-X7-SLY" id="mxC-8s-C6q"/>
                         <outlet property="slangLabel" destination="0wO-cy-E6R" id="154-Fc-g6c"/>
+                        <outlet property="textField" destination="nWY-Zb-0Md" id="hPU-vG-adv"/>
                     </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="75" y="655"/>
+            <point key="canvasLocation" x="344" y="850"/>
         </scene>
     </scenes>
 </document>
