--- a/OneLineToggl/Base.lproj/Main.storyboard
+++ b/OneLineToggl/Base.lproj/Main.storyboard
@@ -2,10 +2,8 @@
 <document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaDFRPlugin" version="7104"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11762"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
-        <capability name="the Touch Bar" message="Use a version of macOS with Touch Bar support." minToolsVersion="8.1" minSystemVersion="10.12.1" requiredIntegratedClassName="NSTouchBar"/>
     </dependencies>
     <scenes>
         <!--Application-->
@@ -672,68 +670,6 @@
                         <rect key="contentRect" x="196" y="240" width="480" height="270"/>
                         <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
                     </window>
-                    <touchBar key="touchBar" id="Hgw-GP-RAe">
-                        <touchBarItems>
-                            <touchBarItem id="Ffs-Ps-Oet">
-                                <viewController key="viewController" id="Lgs-qz-TJV">
-                                    <textField key="view" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ua0-Ca-cjU">
-                                        <rect key="frame" x="0.0" y="0.0" width="46" height="24"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                        <textFieldCell key="cell" borderStyle="bezel" alignment="left" title="Toggl" drawsBackground="YES" id="w7h-xX-4Wh">
-                                            <font key="font" usesAppearanceFont="YES"/>
-                                            <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                        </textFieldCell>
-                                    </textField>
-                                </viewController>
-                            </touchBarItem>
-                            <touchBarItem id="7ih-d8-uyw">
-                                <viewController key="viewController" id="lGP-OJ-TJh">
-                                    <button key="view" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="y55-yG-N1V">
-                                        <rect key="frame" x="-6" y="-7" width="92" height="41"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="80" id="7S9-is-T09"/>
-                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="76" id="JIc-eK-cuE"/>
-                                            <constraint firstAttribute="height" constant="30" id="Zwk-Kb-5uk"/>
-                                        </constraints>
-                                        <buttonCell key="cell" type="push" bezelStyle="rounded" image="***REMOVED***" imagePosition="overlaps" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="FPg-Nj-SCJ">
-                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                            <font key="font" metaFont="system"/>
-                                        </buttonCell>
-                                        <connections>
-                                            <action selector="ksTapped:" target="B8D-0N-5wS" id="pOf-uG-FIC"/>
-                                        </connections>
-                                    </button>
-                                </viewController>
-                                <size key="designTimeSize" width="80" height="30"/>
-                            </touchBarItem>
-                            <touchBarItem id="GVc-XH-jDi">
-                                <viewController key="viewController" id="5q4-fZ-yxQ">
-                                    <button key="view" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="FtM-gf-v1n">
-                                        <rect key="frame" x="-6" y="-7" width="95" height="41"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="2v3-26-uok"/>
-                                            <constraint firstAttribute="height" constant="30" id="f6G-dD-MFO"/>
-                                            <constraint firstAttribute="width" constant="83" id="qqe-6Q-Ckl"/>
-                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="t4I-fX-cpc"/>
-                                        </constraints>
-                                        <buttonCell key="cell" type="push" bezelStyle="rounded" image="***REMOVED***" imagePosition="overlaps" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="sTy-4u-VwB">
-                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                            <font key="font" metaFont="system"/>
-                                        </buttonCell>
-                                        <connections>
-                                            <action selector="p2bTapped:" target="B8D-0N-5wS" id="oxr-Zr-nUH"/>
-                                        </connections>
-                                    </button>
-                                </viewController>
-                                <size key="designTimeSize" width="83" height="30"/>
-                            </touchBarItem>
-                            <touchBarItemOtherItemsProxy identifier="NSTouchBarItemIdentifierOtherItemsProxy" id="lwl-9W-rNL"/>
-                        </touchBarItems>
-                        <connections>
-                            <outlet property="delegate" destination="IQv-IB-iLA" id="R7C-de-8BZ"/>
-                        </connections>
-                    </touchBar>
                     <connections>
                         <segue destination="XfG-lQ-9wD" kind="relationship" relationship="window.shadowedContentViewController" id="Cq8-rc-mhz"/>
                     </connections>
@@ -979,23 +915,12 @@
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lvU-X7-SLY">
                                 <rect key="frame" x="18" y="178" width="444" height="17"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Label" id="nes-EB-coq">
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" id="nes-EB-coq">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
-                            <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wQv-gi-Qfa">
-                                <rect key="frame" x="389" y="167" width="73" height="32"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <buttonCell key="cell" type="push" title="loose" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="t7i-TA-cv1">
-                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                    <font key="font" metaFont="system"/>
-                                </buttonCell>
-                                <connections>
-                                    <action selector="done:" target="XfG-lQ-9wD" id="63r-eY-PKP"/>
-                                </connections>
-                            </button>
                             <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CHj-Xy-is9">
                                 <rect key="frame" x="377" y="13" width="89" height="32"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
@@ -1020,8 +945,4 @@
             <point key="canvasLocation" x="344" y="850"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="***REMOVED***" width="119" height="28"/>
-        <image name="***REMOVED***" width="186" height="45"/>
-    </resources>
 </document>
